Use namespace header directly
